# ubuntu_voice

./: .dockerignore  .gitignore  AGENTS.md  CAPSTONE_SPEC.md  Dockerfile  README.md  evaluation_dataset_samples.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_fix_document_file_content_text.py  20260510_0002_add_company_phone.py  20260510_0003_add_company_description.py  20260528_0004_add_incident_statistics.py  20260605_0005_add_evaluations.py
backend/docs/: README.md  design-decisions.md  whatsapp-webhook.md
backend/scripts/: dev.sh  make_migration.sh  migrate.sh  test.sh
backend/src/: main.py
backend/src/core/: clerk_auth.py  config.py  database.py  dependencies.py  embedding_vector.py  pgvector_setup.py
backend/src/evaluations/: __init__.py  graders.py  runner.py  service.py
backend/src/models/: __init__.py
backend/src/services/: __init__.py  chunking.py  conflict_alerts.py  cost_monitoring.py  document_text.py  embedding_pipeline.py  embeddings.py  guardrails.py  incident_statistics.py  ingestion.py  openrouter_agent.py  rag_agent.py  rag_retrieval.py  supabase_storage.py  whatsapp.py
backend/tests/: test_chat_language.py  test_conflict_alerts.py  test_evaluations.py  test_general_chat.py  test_health_status.py  test_incident_statistics.py  test_rag_query_rewrite.py  test_whatsapp_webhook.py
backend/tests/cost_tests/: test_cost_monitoring.py
backend/tests/embeddings_tests/: query_embeddings.py
backend/tests/ingestion_tests/: test_company_phone.py  (+3 more)
(+43 files in other folders)
